name:                CSharp
version:             0.1.0.0
author:              Jeroen Bransen
build-type:          Custom
cabal-version:       >=1.8

executable CSharp
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Lexer, Parser, Data, SSM, Compile
  build-depends:       base, uuagc, uuagc-cabal, containers, mtl, uu-tc, filepath